--- a/SecondWebPage/index.html
+++ b/SecondWebPage/index.html
@@ -30,18 +30,18 @@
 									<li>
 										<a href="#">Production Engineering</a>
 										<ul>
-											<li><a href="#">Week 1</a></li>
-											<li><a href="#">Week 2</a></li>
-											<li><a href="#">Week 3</a></li>
-											<li><a href="#">Week 4</a></li>
-											<li><a href="#">Week 5</a></li>
-											<li><a href="#">Week 6</a></li>
-											<li><a href="#">Week 7</a></li>
-											<li><a href="#">Week 8</a></li>
-											<li><a href="#">Week 9</a></li>
-											<li><a href="#">Week 10</a></li>
-											<li><a href="#">Week 11</a></li>
-											<li><a href="#">Week 12</a></li>
+											<li><a href="PEweek1.html">Week 1</a></li>
+											<li><a href="PEweek2.html">Week 2</a></li>
+											<li><a href="PEweek3.html">Week 3</a></li>
+											<li><a href="PEweek4.html">Week 4</a></li>
+											<li><a href="PEweek5.html">Week 5</a></li>
+											<li><a href="PEweek6.html">Week 6</a></li>
+											<li><a href="PEweek7.html">Week 7</a></li>
+											<li><a href="PEweek8.html">Week 8</a></li>
+											<li><a href="PEweek9.html">Week 9</a></li>
+											<li><a href="PEweek10.html">Week 10</a></li>
+											<li><a href="PEweek11.html">Week 11</a></li>
+											<li><a href="PEweek12.html">Week 12</a></li>
 										</ul>
 									</li>
 								</ul>
