--- a/SecondWebPage/index.html
+++ b/SecondWebPage/index.html
@@ -30,7 +30,7 @@
 									<li>
 										<a href="#">Production Engineering</a>
 										<ul>
-											<li><a href="PEweeks/PEweek1.html">Week 1</a></li>
+											<li><a href="PEweek1.html">Week 1</a></li>
 											<li><a href="PEweeks/PEweek2.html">Week 2</a></li>
 											<li><a href="PEweeks/PEweek3.html">Week 3</a></li>
 											<li><a href="PEweeks/PEweek4.html">Week 4</a></li>
