--- a/SecondWebPage/PEweek1.html
+++ b/SecondWebPage/PEweek1.html
@@ -17,29 +17,37 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">HOME</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="index.html">Start</a></li>
 							<li>
 								<a href="#">Layouts</a>
 								<ul>
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="PEweek1.html">No Sidebar</a></li>
 									<li>
-										<a href="#">Submenu</a>
+										<a href="#">Production Engineering</a>
 										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
+											<li><a href="PEweek1.html">Week 1</a></li>
+											<li><a href="PEweeks/PEweek2.html">Week 2</a></li>
+											<li><a href="PEweeks/PEweek3.html">Week 3</a></li>
+											<li><a href="PEweeks/PEweek4.html">Week 4</a></li>
+											<li><a href="PEweeks/PEweek5.html">Week 5</a></li>
+											<li><a href="PEweeks/PEweek6.html">Week 6</a></li>
+											<li><a href="PEweeks/PEweek7.html">Week 7</a></li>
+											<li><a href="PEweeks/PEweek8.html">Week 8</a></li>
+											<li><a href="PEweeks/PEweek9.html">Week 9</a></li>
+											<li><a href="PEweeks/PEweek10.html">Week 10</a></li>
+											<li><a href="PEweeks/PEweek11.html">Week 11</a></li>
+											<li><a href="PEweeks/PEweek12.html">Week 12</a></li>
 										</ul>
 									</li>
 								</ul>
 							</li>
 							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="#" class="button primary">Get in Contact</a></li>
 						</ul>
 					</nav>
 				</header>
