--- a/SecondWebPage/index.html
+++ b/SecondWebPage/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Portfolio Richard Zeise</title>
+		<title>Portfolio Richard Zeise - 2025</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,7 +26,7 @@
 								<ul>
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="PEweek1.html">No Sidebar</a></li>
 									<li>
 										<a href="#">Production Engineering</a>
 										<ul>
