try to get back to point where nothing is "modified"

--- a/SecondWebPage/index.html
+++ b/SecondWebPage/index.html
@@ -26,11 +26,11 @@
 								<ul>
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="PEweek1.html">No Sidebar</a></li>
+									<li><a href="no-sidebar.html">No Sidebar</a></li>
 									<li>
 										<a href="#">Production Engineering</a>
 										<ul>
-											<li><a href="PEweek1.html">Week 1</a></li>
+											<li><a href="no-sidebar copy.html">Week 1</a></li>
 											<li><a href="PEweeks/PEweek2.html">Week 2</a></li>
 											<li><a href="PEweeks/PEweek3.html">Week 3</a></li>
 											<li><a href="PEweeks/PEweek4.html">Week 4</a></li>
