--- a/SecondWebPage/no-sidebar copy.html
+++ b/SecondWebPage/no-sidebar copy.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>First introduction to webdesign</title>
+		<title>No Workinh - Landed by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,7 +48,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>No Sidebar</h2>
+							<h2>Week one </h2>
 							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
 						</header>
 
