--- a/SecondWebPage/index.html
+++ b/SecondWebPage/index.html
@@ -30,18 +30,18 @@
 									<li>
 										<a href="#">Production Engineering</a>
 										<ul>
-											<li><a href="no-sidebar copy.html">Week 1</a></li>
-											<li><a href="PEweeks/PEweek2.html">Week 2</a></li>
-											<li><a href="PEweeks/PEweek3.html">Week 3</a></li>
-											<li><a href="PEweeks/PEweek4.html">Week 4</a></li>
-											<li><a href="PEweeks/PEweek5.html">Week 5</a></li>
-											<li><a href="PEweeks/PEweek6.html">Week 6</a></li>
-											<li><a href="PEweeks/PEweek7.html">Week 7</a></li>
-											<li><a href="PEweeks/PEweek8.html">Week 8</a></li>
-											<li><a href="PEweeks/PEweek9.html">Week 9</a></li>
-											<li><a href="PEweeks/PEweek10.html">Week 10</a></li>
-											<li><a href="PEweeks/PEweek11.html">Week 11</a></li>
-											<li><a href="PEweeks/PEweek12.html">Week 12</a></li>
+											<li><a href="PEweeks/PEweek 1.html">Week 1</a></li>
+											<li><a href="PEweeks/PEweekx copy 2.html">Week 2</a></li>
+											<li><a href="PEweeks/PEweekx copy 3.html.">Week 3</a></li>
+											<li><a href="PEweeks/PEweekx copy 4.html">Week 4</a></li>
+											<li><a href="PEweeks/PEweekx copy 5.html">Week 5</a></li>
+											<li><a href="PEweeks/PEweekx copy 6.html">Week 6</a></li>
+											<li><a href="PEweeks/PEweekx copy 7.html">Week 7</a></li>
+											<li><a href="PEweeks/PEweekx copy 8.html">Week 8</a></li>
+											<li><a href="PEweeks/PEweekx copy 9.html">Week 9</a></li>
+											<li><a href="PEweeks/PEweekx copy 10.html">Week 10</a></li>
+											<li><a href="PEweeks/PEweekx copy 11.html">Week 11</a></li>
+											<li><a href="PEweeks/PEweekx copy 12.html">Week 12</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -130,7 +130,7 @@
 							to offer you the chance to take a look into my academical carrer.
 						</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Explore</a></li>
+							<li><a href="ExploreEdu.html" class="button">Exxxxxxx</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -166,7 +166,13 @@
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-file"></span>
+									 <style>
+ 										 a.icon.major {
+  										  cursor: pointer !important;
+  										  pointer-events: auto !important;
+ 											 }
+									 </style>
+									 <a href="ExploreEdu.html" class="icon solid alt major fa-file"></a>
 									<h3>Icon 5</h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
