--- a/SecondWebPage/ExploreEdu.html
+++ b/SecondWebPage/ExploreEdu.html
@@ -28,12 +28,20 @@
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
 									<li>
-										<a href="#">Submenu</a>
+										<a href="#">Production Engineering</a>
 										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
+											<li><a href="PEweeks/PEweek 1.html">Week 1</a></li>
+											<li><a href="PEweeks/PEweekx copy 2.html">Week 2</a></li>
+											<li><a href="PEweeks/PEweekx copy 3.html.">Week 3</a></li>
+											<li><a href="PEweeks/PEweekx copy 4.html">Week 4</a></li>
+											<li><a href="PEweeks/PEweekx copy 5.html">Week 5</a></li>
+											<li><a href="PEweeks/PEweekx copy 6.html">Week 6</a></li>
+											<li><a href="PEweeks/PEweekx copy 7.html">Week 7</a></li>
+											<li><a href="PEweeks/PEweekx copy 8.html">Week 8</a></li>
+											<li><a href="PEweeks/PEweekx copy 9.html">Week 9</a></li>
+											<li><a href="PEweeks/PEweekx copy 10.html">Week 10</a></li>
+											<li><a href="PEweeks/PEweekx copy 11.html">Week 11</a></li>
+											<li><a href="PEweeks/PEweekx copy 12.html">Week 12</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -49,7 +57,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Education</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<p>How about we create problems and stress ourselfes to solve them</p>
 						</header>
 						<div class="row gtr-150">
 							<div class="col-4 col-12-medium">
@@ -57,8 +65,9 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<h3>Magna Feugiat</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
+											<a href="PEweeks/PEover.html" class="image fit"><img src="images/manufacturing.gif" alt="" /></a>
+											<h3>Production Engineering 2025</h3>
+											<p>My first really documented module. Without this course this website woud not be online. Follow my 12 week module progress towards my first ever manufactured projekt</p>
 											<footer>
 												<ul class="actions">
 													<li><a href="#" class="button">Explore</a></li>
@@ -68,8 +77,8 @@
 										<hr />
 										<section>
 											<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet Lorem Tempus</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+											<h3>Does hard work come with success?</h3>
+											<p>I think everyone experiences work differntly. And results do not always show how much effort was put into something. Everbody struggles sometimes but you are not alone. Let me show you how I deal with my struggles in academics</p>
 											<footer>
 												<ul class="actions">
 													<li><a href="#" class="button">Learn More</a></li>
@@ -83,18 +92,26 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<h3>Dolore Amet Consequat</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Sed Magna Ornare</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
+										<style>
+										.custom-img img {
+											width: 100%;
+											height: 450px; /* 🔹 Adjust this value to taste */
+											object-fit: cover; /* ✅ fills the box and crops evenly */
+											object-position: bottom; /* centers the crop */
+										}
+										</style>
+										<a  class="image.fit custom-img"><img src="images/edustart.jpg" alt="" /></a>
+										<h3>I never expected that getting a degree in egnineering is so non-linear</h3>
+										<p>When i graduated from schooö i thought things were pretty straight forward. Go to university, attend the lectures, do your homework, study by yourself and you will get smarter every trimester, things will start to make sense, boom you got your degree. Boy was I wrong</p>
+										<p>It really feels like the more you know the less you fell you know and that can be really overwhelming. Nevertheless I think I have never done something such amazing in my life. The challenges that occured in my still fairly young academic career.  </p>
+										<h3>Future is now!</h3>
+										<p>But sometimes we still have to wait. Yet, I still want to give you a brief idea what I ahveplanned for the future</p>
 										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
+											<li>Dragonfly Drone</li>
+											<li>Nutrition Page</li>
+											<li>Scholorship experience</li>
+											<li>Bachelor- and Masterthesis</li>
+											<li>SHK </li>
 										</ul>
 									</section>
 
