--- a/SecondWebPage/elements.html
+++ b/SecondWebPage/elements.html
@@ -30,12 +30,20 @@
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
 									<li>
-										<a href="#">Submenu</a>
+										<a href="#">Production Engineering</a>
 										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
+											<li><a href="PEweeks/PEweek 1.html">Week 1</a></li>
+											<li><a href="PEweeks/PEweekx copy 2.html">Week 2</a></li>
+											<li><a href="PEweeks/PEweekx copy 3.html.">Week 3</a></li>
+											<li><a href="PEweeks/PEweekx copy 4.html">Week 4</a></li>
+											<li><a href="PEweeks/PEweekx copy 5.html">Week 5</a></li>
+											<li><a href="PEweeks/PEweekx copy 6.html">Week 6</a></li>
+											<li><a href="PEweeks/PEweekx copy 7.html">Week 7</a></li>
+											<li><a href="PEweeks/PEweekx copy 8.html">Week 8</a></li>
+											<li><a href="PEweeks/PEweekx copy 9.html">Week 9</a></li>
+											<li><a href="PEweeks/PEweekx copy 10.html">Week 10</a></li>
+											<li><a href="PEweeks/PEweekx copy 11.html">Week 11</a></li>
+											<li><a href="PEweeks/PEweekx copy 12.html">Week 12</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -384,7 +392,7 @@
 								<div class="box alt">
 									<div class="row gtr-50 gtr-uniform">
 										<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+										<div class="col-4 col-6-xsmall"><a href="ExploreEdu.html"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></a></div>
 										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
 										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
 										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
