--- a/SecondWebPage/left-sidebar.html
+++ b/SecondWebPage/left-sidebar.html
@@ -28,12 +28,20 @@
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
 									<li>
-										<a href="#">Submenu</a>
+										<a href="#">Production Engineering</a>
 										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
+											<li><a href="PEweeks/PEweek 1.html">Week 1</a></li>
+											<li><a href="PEweeks/PEweekx copy 2.html">Week 2</a></li>
+											<li><a href="PEweeks/PEweekx copy 3.html.">Week 3</a></li>
+											<li><a href="PEweeks/PEweekx copy 4.html">Week 4</a></li>
+											<li><a href="PEweeks/PEweekx copy 5.html">Week 5</a></li>
+											<li><a href="PEweeks/PEweekx copy 6.html">Week 6</a></li>
+											<li><a href="PEweeks/PEweekx copy 7.html">Week 7</a></li>
+											<li><a href="PEweeks/PEweekx copy 8.html">Week 8</a></li>
+											<li><a href="PEweeks/PEweekx copy 9.html">Week 9</a></li>
+											<li><a href="PEweeks/PEweekx copy 10.html">Week 10</a></li>
+											<li><a href="PEweeks/PEweekx copy 11.html">Week 11</a></li>
+											<li><a href="PEweeks/PEweekx copy 12.html">Week 12</a></li>
 										</ul>
 									</li>
 								</ul>
