PE overview page with href

--- a/SecondWebPage/ExploreEdu.html
+++ b/SecondWebPage/ExploreEdu.html
@@ -70,7 +70,7 @@
 											<p>My first really documented module. Without this course this website woud not be online. Follow my 12 week module progress towards my first ever manufactured projekt</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Explore</a></li>
+													<li><a href="PEweeks/PEover.html" class="button">Explore</a></li>
 												</ul>
 											</footer>
 										</section>
