--- a/SecondWebPage/index.html
+++ b/SecondWebPage/index.html
@@ -146,7 +146,7 @@
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-chart-area"></span>
+									<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
 									<h3>Icon 1</h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
