--- a/SecondWebPage/PEweeks/PEover.html
+++ b/SecondWebPage/PEweeks/PEover.html
@@ -33,17 +33,17 @@
 										<a href="#">Production Engineering</a>
 										<ul>
 											<li><a href="../PEweeks/PEweek 1.html">Week 1</a></li>
-											<li><a href="../PEweeks/PEweekx copy 2.html">Week 2</a></li>
-											<li><a href="../PEweeks/PEweekx copy 3.html.">Week 3</a></li>
-											<li><a href="../PEweeks/PEweekx copy 4.html">Week 4</a></li>
-											<li><a href="../PEweeks/PEweekx copy 5.html">Week 5</a></li>
-											<li><a href="../PEweeks/PEweekx copy 6.html">Week 6</a></li>
-											<li><a href="../PEweeks/PEweekx copy 7.html">Week 7</a></li>
-											<li><a href="../PEweeks/PEweekx copy 8.html">Week 8</a></li>
-											<li><a href="../PEweeks/PEweekx copy 9.html">Week 9</a></li>
-											<li><a href="../PEweeks/PEweekx copy 10.html">Week 10</a></li>
-											<li><a href="../PEweeks/PEweekx copy 11.html">Week 11</a></li>
-											<li><a href="../PEweeks/PEweekx copy 12.html">Week 12</a></li>
+											<li><a href="../PEweeks/PEweek2.html">Week 2</a></li>
+											<li><a href="../PEweeks/PEweek3.html.">Week 3</a></li>
+											<li><a href="../PEweeks/PEweek4.html">Week 4</a></li>
+											<li><a href="../PEweeks/PEweek5.html">Week 5</a></li>
+											<li><a href="../PEweeks/PEweek6.html">Week 6</a></li>
+											<li><a href="../PEweeks/PEweek7.html">Week 7</a></li>
+											<li><a href="../PEweeks/PEweek8.html">Week 8</a></li>
+											<li><a href="../PEweeks/PEweek9.html">Week 9</a></li>
+											<li><a href="../PEweeks/PEweek10.html">Week 10</a></li>
+											<li><a href="../PEweeks/PEweek11.html">Week 11</a></li>
+											<li><a href="../PEweeks/PEweek12.html">Week 12</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -70,65 +70,65 @@
 
 				<div class="box alt">
 							<div class="row gtr-uniform">
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="../ExploreEdu.html"><span class="image fit"><img src="../images/pic03.jpg" alt="" /></span></a>
+								<section class="col-4 col-6-medium col-6-xsmall">
+									<a href="PEweek 1.html"><span class="image fit square"><img src="../images/PEcovers/intropic.png" alt="" /></span></a>
 									<h3>Week 1</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>First session, know who you are dealing with</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="../ExploreEdu.html"><span class="image fit"><img src="../images/pic03.jpg" alt="" /></span></a>
+									<a href="PEweek2.html"><span class="image fit square"><img src="../images/PEcovers/Webdesign.png" alt="" /></span></a>
 									<h3>Week 2</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Webdesign</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="../ExploreEdu.html"><span class="image fit"><img src="../images/pic03.jpg" alt="" /></span></a>
+									<a href="PEweek3.html"><span class="image fit square"><img src="../images/PEcovers/manupic.png" alt="" /></span></a>
 									<h3>Week 3</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Manufacturing technologie pt 1</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="../ExploreEdu.html"><span class="image fit"><img src="../images/pic03.jpg" alt="" /></span></a>
+									<a href="PEweek4.html"><span class="image fit square"><img src="../images/PEcovers/manupic.png" alt="" /></span></a>
 									<h3>Week 4</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Manufacturing technologie pt 2</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="../ExploreEdu.html"><span class="image fit"><img src="../images/pic03.jpg" alt="" /></span></a>
+									<a href="PEweek5.html"><span class="image fit square"><img src="../images/PEcovers/3dprint.png" alt="" /></span></a>
 									<h3>Week 5</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>First hand on work with 3D printing</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="../ExploreEdu.html"><span class="image fit"><img src="../images/pic03.jpg" alt="" /></span></a>
+									<a href="PEweek6.html"><span class="image fit square"><img src="../images/PEcovers/Drillpic.png" alt="" /></span></a>
 									<h3>Week 6</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Real machines & real work - Manuell Manufacturing</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="../ExploreEdu.html"><span class="image fit"><img src="../images/pic03.jpg" alt="" /></span></a>
+									<a href="PEweek7.html"><span class="image fit square"><img src="../images/PEcovers/lasercutpic.png" alt="" /></span></a>
 									<h3>Week 7</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Advanced Machines Advanced Techniques - CAM</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="../ExploreEdu.html"><span class="image fit"><img src="../images/pic03.jpg" alt="" /></span></a>
+									<a href="PEweek8.html"><span class="image fit square"><img src="../images/PEcovers/robotbuild.png" alt="" /></span></a>
 									<h3>Week 8</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Robot building</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="../ExploreEdu.html"><span class="image fit"><img src="../images/pic03.jpg" alt="" /></span></a>
+									<a href="PEweek9.html"><span class="image fit square"><img src="../images/PEcovers/Personalproject.png" alt="" /></span></a>
 									<h3>Week 9</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Personal Project Progress 1</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="../ExploreEdu.html"><span class="image fit"><img src="../images/pic03.jpg" alt="" /></span></a>
+									<a href="PEweek10.html"><span class="image fit square"><img src="../images/PEcovers/Personalproject.png" alt="" /></span></a>
 									<h3>Week 10</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Personal Project Progress 2</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="../ExploreEdu.html"><span class="image fit"><img src="../images/pic03.jpg" alt="" /></span></a>
+									<a href="PEweek11.html"><span class="image fit square"><img src="../images/PEcovers/Personalproject.png" alt="" /></span></a>
 									<h3>Week 11</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Personal Project Progress 3</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="../ExploreEdu.html"><span class="image fit"><img src="../images/pic03.jpg" alt="" /></span></a>
+									<a href="PEweek12.html"><span class="image fit square"><img src="../images/PEcovers/Personalproject.png" alt="" /></span></a>
 									<h3>Week 12</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Personal Project Progress 4</p>
 								</section>
 								
 										
