--- a/SecondWebPage/elements.html
+++ b/SecondWebPage/elements.html
@@ -33,17 +33,17 @@
 										<a href="#">Production Engineering</a>
 										<ul>
 											<li><a href="PEweeks/PEweek 1.html">Week 1</a></li>
-											<li><a href="PEweeks/PEweekx copy 2.html">Week 2</a></li>
-											<li><a href="PEweeks/PEweekx copy 3.html.">Week 3</a></li>
-											<li><a href="PEweeks/PEweekx copy 4.html">Week 4</a></li>
-											<li><a href="PEweeks/PEweekx copy 5.html">Week 5</a></li>
-											<li><a href="PEweeks/PEweekx copy 6.html">Week 6</a></li>
-											<li><a href="PEweeks/PEweekx copy 7.html">Week 7</a></li>
-											<li><a href="PEweeks/PEweekx copy 8.html">Week 8</a></li>
-											<li><a href="PEweeks/PEweekx copy 9.html">Week 9</a></li>
-											<li><a href="PEweeks/PEweekx copy 10.html">Week 10</a></li>
-											<li><a href="PEweeks/PEweekx copy 11.html">Week 11</a></li>
-											<li><a href="PEweeks/PEweekx copy 12.html">Week 12</a></li>
+											<li><a href="PEweeks/PEweek2.html">Week 2</a></li>
+											<li><a href="PEweeks/PEweek3.html.">Week 3</a></li>
+											<li><a href="PEweeks/PEweek4.html">Week 4</a></li>
+											<li><a href="PEweeks/PEweek5.html">Week 5</a></li>
+											<li><a href="PEweeks/PEweek6.html">Week 6</a></li>
+											<li><a href="PEweeks/PEweek7.html">Week 7</a></li>
+											<li><a href="PEweeks/PEweek8.html">Week 8</a></li>
+											<li><a href="PEweeks/PEweek9.html">Week 9</a></li>
+											<li><a href="PEweeks/PEweek10.html">Week 10</a></li>
+											<li><a href="PEweeks/PEweek11.html">Week 11</a></li>
+											<li><a href="PEweeks/PEweek12.html">Week 12</a></li>
 										</ul>
 									</li>
 								</ul>
