--- a/SecondWebPage/right-sidebar.html
+++ b/SecondWebPage/right-sidebar.html
@@ -30,10 +30,18 @@
 									<li>
 										<a href="#">Submenu</a>
 										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
+											<li><a href="PEweeks/PEweek 1.html">Week 1</a></li>
+											<li><a href="PEweeks/PEweek2.html">Week 2</a></li>
+											<li><a href="PEweeks/PEweek3.html.">Week 3</a></li>
+											<li><a href="PEweeks/PEweek4.html">Week 4</a></li>
+											<li><a href="PEweeks/PEweek5.html">Week 5</a></li>
+											<li><a href="PEweeks/PEweek6.html">Week 6</a></li>
+											<li><a href="PEweeks/PEweek7.html">Week 7</a></li>
+											<li><a href="PEweeks/PEweek8.html">Week 8</a></li>
+											<li><a href="PEweeks/PEweek9.html">Week 9</a></li>
+											<li><a href="PEweeks/PEweek10.html">Week 10</a></li>
+											<li><a href="PEweeks/PEweek11.html">Week 11</a></li>
+											<li><a href="PEweeks/PEweek12.html">Week 12</a></li>
 										</ul>
 									</li>
 								</ul>
