--- a/SecondWebPage/PEweeks/PEover.html
+++ b/SecondWebPage/PEweeks/PEover.html
@@ -70,62 +70,62 @@
 
 				<div class="box alt">
 							<div class="row gtr-uniform">
-								<section class="col-4 col-6-medium col-6-xsmall">
+								<section class="col-4 col-6-medium col-6-xsmall align-center">
 									<a href="PEweek 1.html"><span class="image fit square"><img src="../images/PEcovers/intropic.png" alt="" /></span></a>
 									<h3>Week 1</h3>
 									<p>First session, know who you are dealing with</p>
 								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<section class="col-4 col-6-medium col-12-xsmall align-center">
 									<a href="PEweek2.html"><span class="image fit square"><img src="../images/PEcovers/Webdesign.png" alt="" /></span></a>
 									<h3>Week 2</h3>
 									<p>Webdesign</p>
 								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<section class="col-4 col-6-medium col-12-xsmall align-center">
 									<a href="PEweek3.html"><span class="image fit square"><img src="../images/PEcovers/manupic.png" alt="" /></span></a>
 									<h3>Week 3</h3>
 									<p>Manufacturing technologie pt 1</p>
 								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<section class="col-4 col-6-medium col-12-xsmall align-center">
 									<a href="PEweek4.html"><span class="image fit square"><img src="../images/PEcovers/manupic.png" alt="" /></span></a>
 									<h3>Week 4</h3>
 									<p>Manufacturing technologie pt 2</p>
 								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<section class="col-4 col-6-medium col-12-xsmall align-center">
 									<a href="PEweek5.html"><span class="image fit square"><img src="../images/PEcovers/3dprint.png" alt="" /></span></a>
 									<h3>Week 5</h3>
 									<p>First hand on work with 3D printing</p>
 								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<section class="col-4 col-6-medium col-12-xsmall align-center">
 									<a href="PEweek6.html"><span class="image fit square"><img src="../images/PEcovers/Drillpic.png" alt="" /></span></a>
 									<h3>Week 6</h3>
 									<p>Real machines & real work - Manuell Manufacturing</p>
 								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<section class="col-4 col-6-medium col-12-xsmall align-center">
 									<a href="PEweek7.html"><span class="image fit square"><img src="../images/PEcovers/lasercutpic.png" alt="" /></span></a>
 									<h3>Week 7</h3>
 									<p>Advanced Machines Advanced Techniques - CAM</p>
 								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<section class="col-4 col-6-medium col-12-xsmall align-center">
 									<a href="PEweek8.html"><span class="image fit square"><img src="../images/PEcovers/robotbuild.png" alt="" /></span></a>
 									<h3>Week 8</h3>
 									<p>Robot building</p>
 								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<section class="col-4 col-6-medium col-12-xsmall align-center">
 									<a href="PEweek9.html"><span class="image fit square"><img src="../images/PEcovers/Personalproject.png" alt="" /></span></a>
 									<h3>Week 9</h3>
 									<p>Personal Project Progress 1</p>
 								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<section class="col-4 col-6-medium col-12-xsmall align-center">
 									<a href="PEweek10.html"><span class="image fit square"><img src="../images/PEcovers/Personalproject.png" alt="" /></span></a>
 									<h3>Week 10</h3>
 									<p>Personal Project Progress 2</p>
 								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<section class="col-4 col-6-medium col-12-xsmall align-center">
 									<a href="PEweek11.html"><span class="image fit square"><img src="../images/PEcovers/Personalproject.png" alt="" /></span></a>
 									<h3>Week 11</h3>
 									<p>Personal Project Progress 3</p>
 								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<section class="col-4 col-6-medium col-12-xsmall align-center">
 									<a href="PEweek12.html"><span class="image fit square"><img src="../images/PEcovers/Personalproject.png" alt="" /></span></a>
 									<h3>Week 12</h3>
 									<p>Personal Project Progress 4</p>
