--- a/SecondWebPage/PEweeks/PEweek12.html
+++ b/SecondWebPage/PEweeks/PEweek12.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Week 1 - Landed by HTML5 UP</title>
+		<title>Week 12 - Production Engineering</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -56,7 +56,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Week one </h2>
+							<h2>Week Twelve </h2>
 							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
 
 						</header>
