yt solutiion for videos first weeks filled

--- a/SecondWebPage/PEweeks/PEweek5.html
+++ b/SecondWebPage/PEweeks/PEweek5.html
@@ -83,8 +83,36 @@
 								</ul>
 						
 								
-								<p><span class="flex-container"><video width="360" height="360" autoplay muted loop><source src="../images/PEvids/3Dscan.mp4" type="video/mp4" /></video></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Cras aliquet accumsan curae accumsan arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in gravida sollicitudin interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet nullam. Cras aliquet accumsan curae accumsan arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in gravida sollicitudin interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet nullam.</p>
-								<p><span class="image right"><video width="360" height="360" autoplay muted loop><source src="../images/PEvids/Printbase.mp4" alt="" /></video></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Cras aliquet accumsan curae accumsan arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in gravida sollicitudin interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet nullam. Cras aliquet accumsan curae accumsan arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in gravida sollicitudin interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet nullam.</p>
+								<p>
+								<span class="image left fit square">
+									<iframe
+									width="360"
+									height="360"
+									src="https://www.youtube.com/embed/UHYdm6L40hY?rel=0&controls=0&autoplay=1&mute=1&loop=1&playlist=UHYdm6L40hY"
+									title="YouTube video"
+									frameborder="0"
+									allow="autoplay; encrypted-media; picture-in-picture"
+									allowfullscreen
+									></iframe>
+								</span>
+								Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget...
+								</p>
+
+								<p>
+								<span class="image right fit square">
+									<iframe
+									width="360"
+									height="360"
+									src="https://www.youtube.com/embed/UHYdm6L40hY?rel=0&controls=0&autoplay=1&mute=1&loop=1&playlist=UHYdm6L40hY"
+									title="YouTube video"
+									frameborder="0"
+									allow="autoplay; encrypted-media; picture-in-picture"
+									allowfullscreen
+									></iframe>
+								</span>
+								Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget...
+								</p>
+
 							</section>
 
 					</div>
